# rcat

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/utils/: cli_args_handler.rs  file_handler.rs  mod.rs
